format-transformer-gateway/format-transformer-gateway-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: format-transformer-gateway-deployment
  namespace: ft-backend
  labels:
    app: format-transformer-gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: format-transformer-gateway
  template:
    metadata:
      labels:
        app: format-transformer-gateway
    spec:
      containers:
      - name: format-transformer-gateway
        image: meksula/format-transformer-gateway:v1.0.3-rc
        ports:
        - name: web
          containerPort: 8080
          protocol: TCP
      restartPolicy: Always
