format-transformer-gateway/format-transformer-gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: ft-backend
  name: format-transformer-gateway-service
  labels:
    app: format-transformer-gateway
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: format-transformer-gateway
