format-transformer-gateway/format-transformer-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: format-transformer-frontend-ingress
  namespace: ft-backend
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - http:
      paths:
        - path: "/api/v1"
          pathType: Prefix
          backend:
            service:
              name: format-transformer-gateway-service
              port:
                number: 8080
